--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,3 +264,15 @@ button {
     clear: both;
     display: block;
 }
+
+@media screen and (max-width: 980px) {
+
+}
+
+@media screen and (max-width: 768px) {
+
+}
+
+@media screen and (max-width: 640px) {
+
+}
