--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,7 @@ body {
     padding: 0px;
     padding-left: 95px;
     background-color: white;
+    width: 100%;
 }
 
 .footer {
@@ -154,7 +155,7 @@ body {
     font-weight: bold;
     font-family: 'Times New Roman';
     width: 275px;
-    margin: auto;
+    margin: 0 auto;
 }
 
 .contact {
@@ -191,11 +192,8 @@ body {
 .content {
     background-color: white;
     display: block;
-    width: 960px;      
-    position: relative;
-    top: 15px;
-    left: 200px;
-    margin: 70px;
+    width: 960px;
+    margin: auto;
 }
 
 h2 {
@@ -266,13 +264,89 @@ button {
 }
 
 @media screen and (max-width: 980px) {
-
+.content {
+    margin: 70px;
+}
 }
 
 @media screen and (max-width: 768px) {
-
+.header {
+    width: 100%;
+    }
+.content {
+    width: 600px;
+}
+.text6 {
+    position: absolute;
+    top: 740px;
+    left: 20px;
+    width: 270px;
+}
+.text1 {
+    position: absolute;
+    top: 940px;
+    left: 20px;
+    width: 270px;
+}
+.text4 {
+    position: absolute;
+    top: 530px;
+    left: 20px;
+    width: 270px;
+}
+.content {
+    margin: 40px;
 }
 
+}
 @media screen and (max-width: 640px) {
+.header {
+    padding-left: 0px; 
+    }
+.ZR {
+    padding: 10px;
+}
+.contact {
+    margin: 0 auto;
+    padding-top: 15px;
+}
 
+.about {
+    padding-top: 15px;
+}
+
+.portfolio {
+    padding-top: 15px;
+}  
+.content {
+    width: 325px;
+    margin: auto;
+    padding-bottom: 25px;
+}
+button {
+    width: 20%;
+    padding: 10px;
+    font-size: 15px;
+}
+.text6 {
+    position: absolute;
+    top: 740px;
+    left: 20px;
+    width: 270px;
+}
+.text1 {
+    position: absolute;
+    top: 940px;
+    left: 20px;
+    width: 270px;
+}
+.text4 {
+    position: absolute;
+    top: 530px;
+    left: 20px;
+    width: 270px;
+}
+.content {
+    margin: 20px;
+}
 }
